# strudel-converter

./: .gitignore  BASS_LINE.txt  BEAT.txt  BEAT_v2.txt  BEAT_v3.txt  README.md  Toter Schmetterling.txt  Toter Schmetterling_bass_PASTE_ME.txt  Toter Schmetterling_bass_selfcontained.txt  Toter Schmetterling_bass_strudel.txt  Toter Schmetterling_full.txt  Toter Schmetterling_loop.txt  _analyze_bass2.py  _closed_loop.py  _diagnose.py  _drums_v5.py  _fix_drums.py  _gen_beat.py  _gen_layers.py  _gen_output.txt  _gen_pattern.py  _ml_extract.py  _reextract_bass.py  _unified.py  make_full_song.py  make_loops.py  pyproject.toml  strudel.json
Toter Schmetterling_stems/: Toter Schmetterling_stems_manifest.json
Toter Schmetterling_strudel/: strudel.json  strudel_full.json  strudel_v3.json  strudel_v4.json  strudel_v5.json
src/strudel_converter/: __init__.py  analyze.py  bass_synth.py  cli.py  export.py  fourier_mode.py  full_pipeline.py  loop_optimizer.py  models.py  stem_workflow.py
