[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strudel-converter"
version = "0.1.0"
description = "Rule-based techno to Strudel converter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "librosa>=0.11",
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.scripts]
strudel-converter = "strudel_converter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
